Docs: arrumacao geral
